# uSEQ

./: .gitignore  .projectile  2024-12-18 uSEQ I2C Notes.md  CMakeLists.txt  LispLibrary.lisp  README.md  _clang-format  lisp_to_cstr.sh  lisplibrary.py  meson.build  pinmap.h  piopwm.h  tempoEstimator.cpp  tempoEstimator.h  uSEQ.ino
.clj-kondo/.cache/v1/clj/: user.transit.json
.lsp/.cache/: db.transit.json
docs/: changelog.md  dev.md  useq.md
hardware/: hardware.md
hardware/uSeqIns1.0/: uSeqIns1.0.kicad_pcb  uSeqIns1.0.kicad_prl  uSeqIns1.0.kicad_pro  uSeqIns1.0.kicad_sch  uSeqIns1.0.kicad_sch_old  uSeqIns1.0.round-tracks-config  uSeqIns1.0.xml
hardware/version0.1/: .~lock.useqBOM-v0.1.csv#  useqBOM-v0.1.csv  v0.1.guide.md
hardware/version0.2/: v0.2.guide.md
hardware/version0.2/fr4panel/fr4panel/: _autosave-fr4panel.kicad_pcb  fp-info-cache  fr4panel.kicad_pcb  fr4panel.kicad_prl  fr4panel.kicad_pro
hardware/version0.2/fr4panel/fr4panel/jlcpcb/: project.db
hardware/version0.2/fr4panel/fr4panel/jlcpcb/gerber/: fr4panel-CuBottom.gbr  fr4panel-CuTop.gbr  fr4panel-EdgeCuts.gbr  fr4panel-MaskBottom.gbr  fr4panel-MaskTop.gbr  fr4panel-NPTH.drl  fr4panel-PTH.drl  fr4panel-PasteBottom.gbr  fr4panel-PasteTop.gbr  fr4panel-SilkBottom.gbr  fr4panel-SilkTop.gbr  fr4panel-VScore.gbr
hardware/version0.2/kicad/: fp-info-cache  useq.csv  useq.kicad_pcb  useq.kicad_prl  useq.kicad_pro  useq.kicad_sch  useq.xml
hardware/version0.2/kicad/bom/: ibom.html
hardware/version0.2/kicad/gbr/: useq-B_Mask.gbr  useq-F_Mask.gbr  useq-F_Paste.gbr  useq-NPTH.drl  useq-PTH.drl  useq-job.gbrjob
hardware/version0.2/kicad/jlcpcb/: project.db
hardware/version0.2/kicad/jlcpcb/gerber/: useq-CuBottom.gbr  useq-CuTop.gbr  useq-EdgeCuts.gbr  useq-MaskBottom.gbr  useq-MaskTop.gbr  useq-NPTH.drl  useq-PTH.drl  useq-PasteBottom.gbr  useq-PasteTop.gbr  useq-SilkBottom.gbr  useq-SilkTop.gbr  useq-VScore.gbr
hardware/version0.2/kicad/jlcpcb/production_files/: BOM-useq.csv  CPL-useq.csv
hardware/version0.2/panel/: useqPanel_export.dxf  useqPanel_v0.2.scad  useqPanel_v0.2.stl
hardware/version1.0/: v1.0.guide.md
hardware/version1.0/fr4panel/fr4panel/: fp-info-cache  fr4panel.kicad_pcb  fr4panel.kicad_prl  fr4panel.kicad_pro
hardware/version1.0/useq1/: cephlalogo.kicad_mod  fp-info-cache  useq1-bottom-pos.csv  useq1-cache.lib  useq1-top-pos.csv  useq1.csv  useq1.kicad_pcb  useq1.kicad_prl  useq1.kicad_pro  useq1.kicad_sch  useq1.kicad_sch-bak  useq1.sch  useq1.xml  ~useq1.kicad_pcb.lck  ~useq1.kicad_sch.lck
hardware/version1.0/useq1/gbr/: useq-NPTH-drl_map.ps  useq-PTH-drl_map.ps  useq1-B_Cu.gbr  useq1-B_Mask.gbr  useq1-B_Paste.gbr  useq1-B_Silkscreen.gbr  useq1-Edge_Cuts.gbr  useq1-F_Cu.gbr  useq1-F_Mask.gbr  useq1-F_Paste.gbr  useq1-F_Silkscreen.gbr  useq1-NPTH-drl_map.gbr  useq1-NPTH.drl  useq1-PTH-drl_map.gbr  useq1-PTH.drl  useq1-drl.rpt  useq1-job.gbrjob
interfaces/SC/: uSEQ.scd
interfaces/useqedit/: Buffer.py  Clipping.py  Console.py  Cursor.py  Lispy.py  MessageLog.py  SerialIO.py  SerialOutMappings.py  SerialStreamMap.py  Window.py  midiIO.py  readme.md  requirements.txt  useqedit.json.template  useqedit.py
interfaces/virtual/: CMakeLists.txt  String.cpp  String.h  __string.h  itoa.cpp  main.cpp
interfaces/virtual/deprecated-avr-comp/avr/: dtostrf.h
interfaces/virtual/etl/: macros.h
scripts/: .nrepl-port  build.sh  build_arduino_cli.sh  builtin_template.cpp  builtins(original).cpp  builtins.edn  capture_serial.sh  generate_builtins.clj  lisplibrary.py
src/: interpreter.h  main.cpp  standalone_interpreter.cpp  uSEQ.cpp  uSEQ.h  utils.h
src/interpreter/: environment.cpp  environment.h  reader.h  value.cpp  value.h
src/io/: hardware.h  pinmap.h  std.cpp
src/lib/: string.h
src/lisp/: builtin.h  environment.cpp  environment.h  interpreter.cpp  interpreter.h  parser.cpp  parser.h  value.cpp  value.h
src/ml/: drum-model-3.h
src/uSEQ/: MAFilter.hpp  configure.h  io.cpp  io.h  pinmap.h  piopwm.h  uSEQ_EEPROM.cpp  useq.h
src/uSEQ/firmware/: main.cpp
src/utils/: arduino_io.h  common.cpp  dtostrf.h  error_messages.cpp  error_messages.h  itoa.cpp  itoa.h  log.cpp  log.h  stdio.h  string.cpp  string.h
test/: testpatch.useq
test/ButtonTest/: ButtonTest.ino.ino
test/ModuLisp/: parse.hpp
uSEQ/: LispLibrary.h  _clang-format  drum-model-1.h  drum-model-4.h  i2c-branch-todo  pinmap.h  uSEQ.ino  uSEQ_setup.cpp
uSEQ/firmwareVersions/: uSEQ-1-1-1-i2c.ino.uf2  uSEQ-8outexpander-0-1.ino.uf2
uSEQ/src/: release_notes.txt  standalone_interpreter.cpp  uSEQ.cpp  uSEQ.h  uSEQ_Core.cpp  uSEQ_HardwareControl.cpp  uSEQ_HardwareControl.h  uSEQ_IO.cpp  uSEQ_IO.h  uSEQ_Init.cpp  uSEQ_Init.h  uSEQ_LispFunctions.cpp  uSEQ_LispFunctions.h  uSEQ_Modules.h  uSEQ_Scheduler.cpp  uSEQ_Scheduler.h  uSEQ_Signals.cpp  uSEQ_Signals.h  uSEQ_Storage.cpp  uSEQ_Storage.h  uSEQ_Timing.cpp  uSEQ_Timing.h  uSEQ_api.cpp  uSEQ_api_helper.cpp  uSEQ_bpm.cpp  uSEQ_hardware_io.cpp  uSEQ_inputs.cpp  uSEQ_lisp.cpp  uSEQ_loop.cpp  uSEQ_outputs.cpp  uSEQ_serial.cpp  uSEQ_setup.cpp  uSEQ_storage.cpp  uSEQ_time.cpp  utils.cpp  utils.h
uSEQ/src/dsp/: MAFilter.h  MAFilter.hpp  MedianFilter.h  dsp-core0.hpp  dsp-engine.hpp  dsp-queues.cpp  dsp-queues.hpp  tempoEstimator.cpp  tempoEstimator.h
uSEQ/src/dsp/dspatch/: README.md
uSEQ/src/dsp/dspatch/include/: DSPatch_Embedded.h
uSEQ/src/dsp/uSeqGens/: uSeqGen_Base.h  uSeqGen_Counter.h  uSeqGen_Mul.h  uSeqGen_QueueInput.h  uSeqGen_QueueOutput.h  uSeqGen_SerialPrint.h
uSEQ/src/io/: hardware.cpp  std.cpp
uSEQ/src/lisp/: LispLibrary.h  LispLibrary.lisp  configure.h  environment.cpp  environment.h  generated_builtins.cpp  generated_builtins.h  interpreter.cpp  interpreter.h  macros.h  parser.cpp  parser.h  value.cpp  value.h
uSEQ/src/ml/: drum-model-2.h
uSEQ/src/uSEQ/: board.h  configure.h  i2cClient.h  i2cHost.h  i2cUtils.h  pinmap.h  piopwm.h  uSEQ_EEPROM.h
uSEQ/src/utils/: common.h  error_messages.h  flags.cpp  flags.h  io.h  itoa.cpp  itoa.h  log.cpp  log.h  serial_message.h  std_io.h  string.cpp  string.h  topo_sort.hpp
(+4 files in other folders)
